# mfcfd

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindPETSc.cmake  FindPackageMultipass.cmake
examples/mpi_adjoint/: vor_area
examples/mpi_serial/: input.nml.example
install/: install.py
scripts/: bar.py  extract_voronoi.py  final-output.py  merge_sensitivities.py  phi_split.py  set_phi1_equal_phi2.py  voronoi_generate.py  voronoi_split.py
src_cuda/: adaptation_sensors.F90  compute_force_coeffs.F90  data_structure.F90  device_data_structure.cuf  flux_residual.cuf  generate_connectivity.F90  meshfree_solver.F90  point_normals.F90  point_preprocessor.F90  post_processing.F90  q_lskum.cuf  q_variables.cuf  state_update.cuf
src_cuda_3rd_order/: compute_entropy.F90  compute_force_coeffs.F90  data_structure.F90  flux_residual.cuf  initial_conditions.F90  meshfree_solver.F90  q_lskum.cuf  state_update.cuf
src_cuda_primal/: compute_entropy.F90  data_structure.F90  device_data_structure.cuf  flux_residual.cuf  meshfree_solver.F90  phi_vector.F90  point_preprocessor.F90  q_lskum.cuf
src_mpi_adjoint/: parameter.F90  point_preprocessor.F90  utilities.F90
src_mpi_adjoint/phi_files/: generate_connectivity_b.F90  state_update_b.F90
src_mpi_adjoint/sensitivity_files/: state_update_b.F90
src_mpi_adjoint_cuda/: meshfree_solver.F90
src_mpi_adjoint_cuda/sensitivity_files/: device_data_structure.cuf  q_lskum_chkpts_cuda.cuf  quadrant_fluxes_b.F90  split_fluxes_b.F90  state_update_b.F90
src_mpi_clean/: state_update.F90
src_mpi_clean/sensitivity_files/: state_update_b.F90
src_mpi_clean/tangent_files/: state_update_d.F90
src_mpi_forward/sensitivity_files/: state_update_d.F90
src_mpi_primal/: interior_fluxes.F90  meshfree_solver.F90  outer_fluxes.F90  point_preprocessor.F90  quadrant_fluxes.F90  state_update.F90  utilities.F90  wall_fluxes.F90
src_mpi_serial/: compute_enstrophy.F90  compute_entropy.F90  compute_force_coeffs.F90  data_structure.F90  initial_conditions.F90  meshfree_solver.F90  point_preprocessor.F90  q_lskum.F90  stagnation_values.F90  state_update.F90
src_mpi_tangent/: meshfree_solver.F90  parameter.F90  point_normals.F90  point_preprocessor.F90  run_script.sh
src_mpi_tangent/phi_files/: state_update_d.F90
src_primal/: compute_enstrophy.F90  compute_entropy.F90  compute_force_coeffs.F90  data_structure.F90  device_data_structure.cuf  flux_residual.cuf  fpi_solver.F90  generate_connectivity.F90  makefile  meshfree_solver.F90  objective_function.F90  petsc_data_structure.F90  point_normals.F90  point_preprocessor.F90  post_processing.F90  q_lskum.F90  q_lskum.cuf  q_variables.cuf  quadrant_fluxes.F90  readcase.F90  split_fluxes.F90  state_update.F90  state_update.cuf
src_serial/: fpi_solver.F90  generate_connectivity.F90  meshfree_solver.F90  parameter.F90  post_processing.F90
src_serial_primal/: compute_entropy.F90  compute_force_coeffs.F90  data_structure.F90  fpi_solver.F90  meshfree_solver.F90  parameter.F90  point_preprocessor.F90  q_variables.F90  run_script_tangent.sh  split_fluxes.F90  state_update.F90
src_serial_primal/phi_files/: compute_entropy_d.F90  compute_force_coeffs_d.F90  data_structure_d.F90  flux_residual_d.F90  fpi_solver_d.F90  generate_connectivity_d.F90  interior_fluxes_d.F90  limiters_d.F90  objective_function_d.F90  outer_fluxes_d.F90  point_normals_d.F90  q_lskum_d.F90  q_lskum_d.msg  q_variables_d.F90  quadrant_fluxes_d.F90  split_fluxes_d.F90  state_update_d.F90  wall_fluxes_d.F90
